--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -1,27 +1,19 @@
-@use 'variables' as *;
+@use '../scss/variables' as *;
 
 // Media queries
-@mixin mobile-only {
-    @media (max-width: calc($tablet - 1px)) {
-        @content;
-    }
-}
-
-@mixin tablet-up {
-    @media (min-width: $tablet) {
-        @content;
-    }
-}
-
-@mixin desktop-up {
-    @media (min-width: $desktop) {
-        @content;
-    }
-}
-
-@mixin wide-up {
-    @media (min-width: $wide) {
-        @content;
+@mixin respond-to($breakpoint) {
+    @if $breakpoint == 'phone' {
+        @media (max-width: $mobile) {
+            @content;
+        }
+    } @else if $breakpoint == 'tablet' {
+        @media (max-width: $tablet) {
+            @content;
+        }
+    } @else if $breakpoint == 'desktop' {
+        @media (min-width: $tablet) and (max-width: $desktop) {
+            @content;
+        }
     }
 }
 
