--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,18 +1,16 @@
 //config
-@use '../scss/variables' as *;
-@use '../scss/variables' as *;
+@use './variables' as *;
+@use './utilities' as *;
 
-//base styles
-@use 'components/base';
 
 //layout
-@use 'layout/main';
+@use './layout/base';
+@use './layout/header';
+@use './layout/aside';
+@use './layout/body';
 
 //components
-@use 'components/aside';
-@use 'components/base';
-@use 'components/buttons';
-@use 'components/header';
-@use 'components/nav';
+@use './components/buttons';
+@use './components/nav';
 
 
