--- a/src/scss/layout/_base.scss
+++ b/src/scss/layout/_base.scss
@@ -1,1 +1,12 @@
 @use '../variables' as *;
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: $font-family;
+}
+
+html {
+    scroll-behavior: smooth;
+}
