--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,6 +15,7 @@ $light-text: #333333;
 $light-nav: #DFD8CC;
 $light-accent: #E8C4B0;
 
+$orange: #DC8744;
 $active-text: #CDC5B7;
 
 // Dark palette (fallback values)
