--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     margin: 0;
     transition: $transition-default;
+    overflow-y: hidden;
 }
 
 /* Crea un contenedor para lo que va debajo del header */
@@ -17,22 +18,158 @@ body {
     flex: 1; /* Ocupa el resto del espacio vertical */
 }
 
-/* Asegura que la sección del cuaderno crezca para llenar el espacio */
+
 .notebook {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex: 1; /* Esto obliga a la sección a ocupar todo el ancho restante */
     background-color: var(--color-bg);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     @include respond-to('tablet') {
         padding: 0%;
     }
     
     @include respond-to('phone') {
+        width: 100%;
         padding: 0%;
     }
+
+    .page {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+
 }
+
+
+    .notebook-content {
+    position: absolute;
+    /* Ajustamos los márgenes para no escribir sobre los espirales */
+    top: 10%;   
+    display: flex;
+    flex-direction: column;
+    
+    width: 100%;  /* Ancho disponible */
+    height: 75%; /* Alto disponible */
+    padding-right: 10px; /* Espacio para que el scroll no tape el texto */
+    
+
+    color: var(--color-text);
+}
+    .row{
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: $orange;
+        border-radius: 30px;
+        padding: 10px;
+        margin-bottom: 10px;
+        
+    }
+
+    input{
+        flex: 1;
+        border: none;
+        outline: none;
+        background: #EBF0F3;
+        padding: 15px 20px;
+        border-radius: 30px;
+        position: relative;
+    }
+
+    button{
+        position: relative;
+        border: none;
+        outline: none;
+        padding: 15px 50px;
+        background: $orange;
+        color: var(--color-text);
+        font-size: $h3;
+        cursor: pointer;
+        border-radius: 30px;
+        transition: $transition-default;
+        &:hover{
+            opacity: 0.8;
+            background-color: #CE8043;
+        }
+        
+    }
+    #list-container{
+        flex-grow: 1;
+        overflow-y: auto;
+        padding-left: 40px;
+        padding-right: 10px;
+        
+    
+
+        li{
+            list-style: none;
+            font-size: $h4;
+            color: #141414;
+            cursor: pointer;
+            position: relative;
+            padding-left: 40px;
+            line-height: 3rem;
+            border-bottom: 1px solid #141414;
+            width: 90%;
+            left: 3%;
+        }
+
+        li::before {
+            content: '';
+            position: absolute;
+            height: 28px;
+            width: 28px;
+            border-radius: 50%;
+            
+            /* Ruta de la imagen (asegúrate que sea la correcta) */
+            background-image: url('/src/assets/unchecked.png'); 
+            background-size: cover;
+            background-position: center;
+
+            /* --- ALINEACIÓN PERFECTA --- */
+            left: 0;            /* Lo pegamos a la izquierda del todo */
+            top: 50%;           /* Lo bajamos a la mitad de la altura del li */
+            transform: translateY(-50%); /* Lo subimos un poquito para centrarlo verticalmente exacto */
+        }
+
+        li.checked{
+            color: #555;
+            text-decoration: line-through;
+        }
+
+        li.checked::before{
+            background-image: url('/src/assets/checked.png');
+        }
+
+        li span{
+            position: absolute;
+            right: 0;
+            top: 5px;
+            width: 40px;
+            height: 40px;
+            font-size: $h2;
+            color: #555;
+            line-height: 40px;
+            text-align: center;
+            border-radius: 50%;
+            transition: $transition-default;
+        }
+
+        li span:hover{
+            background: #d4d4d4;
+        }
+    }
+
+}
+
+
+
 
 .notebook img {
     width: 100%; 
@@ -41,4 +178,5 @@ body {
 
 
 }
+
 
